--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "streamfp",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Use node streams as reactive entities with a simplified management",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,12 @@
     "stream",
     "node",
     "reactive",
-    "fp"
+    "fp",
+    "functional programming",
+    "map",
+    "filter",
+    "reduce",
+    "compose"
   ],
   "author": "Fabrizio Ruggeri",
   "license": "MIT",
